--- a/app/views/users/delete.html.erb
+++ b/app/views/users/delete.html.erb
@@ -1,9 +1,9 @@
 <h3>Delete <%= @user.name %>'s Assignments</h3>
 <ul class="nav nav-tabs">
-  <li role="presentation"><%= link_to("Assigned Schedule", "/users/"+@user.id.to_s+"/assignments") %></li>
-  <li role="presentation"><%= link_to("Preference Schedule","/users/"+@user.id.to_s+"/preference") %></li>
+  <li role="presentation"><%= link_to("Assigned Schedule", sanitize("/users/"+@user.id.to_s+"/assignments")) %></li>
+  <li role="presentation"><%= link_to("Preference Schedule", sanitize("/users/"+@user.id.to_s+"/preference")) %></li>
   <% if current_user.admin? %>
-    <li role="presentation" class="active"><%= link_to("Delete Assignments","/users/"+@user.id.to_s+"/delete_assignments") %></li>
+    <li role="presentation" class="active"><%= link_to("Delete Assignments", sanitize("/users/"+@user.id.to_s+"/delete_assignments")) %></li>
   <% end %>
 </ul>
 <div class="row"><div class="col-md-5">
